--- a/POO_MOO/dev.Tests/dev.Tests.csproj
+++ b/POO_MOO/dev.Tests/dev.Tests.csproj
@@ -52,7 +52,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="dev\GameBuilderTests.cs" />
     <Compile Include="dev\GameTests.cs" />
+    <Compile Include="dev\TileFlyweightTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\PexAssemblyInfo.cs" />
   </ItemGroup>
