adding c# side wrapper interface for map creation + unit filling + tests; unit characteristics; game sequence (player alternation + end of game)  not tested yet

--- a/POO_MOO/dev/dev.csproj
+++ b/POO_MOO/dev/dev.csproj
@@ -76,6 +76,7 @@
     <Compile Include="dev\Game\Turn.cs" />
     <Compile Include="API\TurnAPI.cs" />
     <Compile Include="dev\Game\Undoable.cs" />
+    <Compile Include="dev\Tile\TileType.cs" />
     <Compile Include="dev\Unit\Unit.cs" />
     <Compile Include="dev\Tile\Water.cs" />
     <Page Include="MainWindow.xaml">
