--- a/POO_MOO/dev.Tests/dev.Tests.csproj
+++ b/POO_MOO/dev.Tests/dev.Tests.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="dev\GameBuilderTests.cs" />
     <Compile Include="dev\GameTests.cs" />
+    <Compile Include="dev\Map\MapStrategyTests.cs" />
     <Compile Include="dev\Map\MapTilesFactoryTests.cs" />
     <Compile Include="dev\TileFlyweightTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
