--- a/POO_MOO/dev/dev.csproj
+++ b/POO_MOO/dev/dev.csproj
@@ -77,6 +77,7 @@
     <Compile Include="API\TurnAPI.cs" />
     <Compile Include="dev\Game\Undoable.cs" />
     <Compile Include="dev\Tile\TileType.cs" />
+    <Compile Include="dev\Unit\Race.cs" />
     <Compile Include="dev\Unit\Unit.cs" />
     <Compile Include="dev\Tile\Water.cs" />
     <Page Include="MainWindow.xaml">
