--- a/POO_MOO/dev.Tests/dev.Tests.csproj
+++ b/POO_MOO/dev.Tests/dev.Tests.csproj
@@ -55,6 +55,7 @@
     <Compile Include="dev\GameBuilderTests.cs" />
     <Compile Include="dev\GameTests.cs" />
     <Compile Include="dev\Map\MapTilesFactoryTests.cs" />
+    <Compile Include="dev\Map\WrapperTests.cs" />
     <Compile Include="dev\TileFlyweightTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\PexAssemblyInfo.cs" />
